--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8000
-DB_URL=postgres://postgres:250705@localhost:5432/rssagg
+DB_URL=postgres://postgres:250705@localhost:5432/rssagg?sslmode=disable
